.github/workflows/build.yml:make sequence

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       BUILD: "build"
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]#, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: echo test
@@ -74,7 +74,14 @@ jobs:
 
       - run: python3 -m pip install virtualenv
 
+      - run: V=1 make checkbrew
+      - run: printenv
       - run: V=1 make
+      - run: OS=False V=1 make all
+      - run: V=1 make help
+      - run: V=1 make report
+      - run: V=1 make submodules
+      - run: V=1 make docker-start
 
       - name: Save deps
         id: cache-deps-save
