--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
 
       - run: printenv
 
-      #- run: V=1 make checkbrew
+      - run: V=1 make checkbrew
       #- run: V=1 make docker-start
       #- run: V=1 make all
 
